--- a/local/index.html
+++ b/local/index.html
@@ -21,7 +21,7 @@ xhttp.onreadystatechange = function() {
        document.getElementById("content").innerHTML = tmp[0];
     }
 };
-xhttp.open("GET", "api/trend.php", true);
+xhttp.open("GET", "../api/trend.php", true);
 xhttp.send();
 
 		
